# kanatui

./: Cargo.toml  test.txt
src/: main.rs
src/hiragana/: hiragana.txt  hj.json  mod.rs  tui.rs  ui.rs
src/katakana/: tui.rs
